--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,5 @@
+#Will allow pane selection with mouse, scrolling up using the mouse, and copying by clicking to highlight. Paste with ctrl+b and ]
+
 set -g mouse on
 
 bind -T copy-mode    DoubleClick1Pane select-pane \; send -X select-word \; send -X copy-pipe-no-clear "xsel -i"
